Hero and footer work

--- a/index.html
+++ b/index.html
@@ -97,9 +97,25 @@
                             I specialize in building responsive, dynamic web applications using MongoDB, Express, React, and Node.js for scalable solutions.
                         </p>
 
-                        <div class="button-section">
-                            <a href="javascript:void(0)" class="btn btn-primary rounded-pill mt-lg-4 mt-4 text-capitalize me-3">Contact me</a>
-                            <a href="javascript:void(0)" class="btn btn-outline-primary rounded-pill mt-4 mt-md-4 text-capitalize">Profile</a>
+                         <div class="social-container">
+                                    <a href="https://wa.me/8801788224228" target="_blank" class="whatsapp" aria-label="WhatsApp">
+                                        <i class="fab fa-whatsapp"></i>
+                                    </a>
+                                    <a href="mailto:faisalhasib82@gmail.com" target="_blank" class="email" aria-label="email">
+                                        <i class="fa-solid fa-envelope"></i>
+                                    </a>
+                                    <a href="https://www.youtube.com/@FoysalHasibItAcademy/featured" target="_blank" class="youtube" aria-label="YouTube">
+                                        <i class="fab fa-youtube"></i>
+                                    </a>
+                                    <a href="https://medium.com/@faisalhasib82" target="_blank" class="medium" aria-label="Medium">
+                                        <i class="fab fa-medium"></i>
+                                    </a>
+                                    <a href="https://www.linkedin.com/in/foysal-hasib-90170a287/" target="_blank" class="linkedin" aria-label="LinkedIn">
+                                        <i class="fab fa-linkedin"></i>
+                                    </a>
+                                    <a href="https://www.facebook.com/foysalhasib1234" target="_blank" class="facebook" aria-label="Facebook">
+                                        <i class="fab fa-facebook"></i>
+                                    </a>
                         </div>
                     </div>
                 </div><!-- End col -->
@@ -141,7 +157,7 @@
             </div><!-- End row -->
         </div><!-- End container -->
     </section>
-    <!-- End Hero -->
+    <!--================================ End Hero ===================================-->
 
     <!-- ================================================================================== -->
     <!--=============================== about Start  ========================================-->
@@ -1454,10 +1470,10 @@
                                         <h6>Social</h6>
                                     </div>
                                     <ul class="social-text">
-                                        <li class="mb-2"><a href="#0">Facebook</a></li>
-                                        <li class="mb-2"><a href="#0">Twitter</a></li>
-                                        <li class="mb-2"><a href="#0">LinkedIn</a></li>
-                                        <li class="mb-2"><a href="#0">Instagram</a></li>
+                                        <li class="mb-2"><a target="_blank"   href="https://www.facebook.com/foysalhasib1234">Facebook</a></li>
+                                        <li class="mb-2"><a target="_blank"   href="https://medium.com/@faisalhasib82">Medium</a></li>
+                                        <li class="mb-2"><a target="_blank"   href="https://www.linkedin.com/in/foysal-hasib-90170a287/">LinkedIn</a></li>
+                                        <li class="mb-2"><a target="_blank"   href="https://www.youtube.com/@FoysalHasibItAcademy/featured">Youtube</a></li>
                                     </ul>
                                 </div>
                         
