--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 
      <!-- Swiperjs CSS Link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-
+    
+    <!-- Responsive css  Link -->
+     <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
@@ -101,7 +103,7 @@
                                     <a href="https://wa.me/8801788224228" target="_blank" class="whatsapp" aria-label="WhatsApp">
                                         <i class="fab fa-whatsapp"></i>
                                     </a>
-                                    <a href="mailto:faisalhasib82@gmail.com" target="_blank" class="email" aria-label="email">
+                                    <a href="mailto:faisalhasib82@gmail.com?subject=Hello%20Foysal&body=I%20want%20to%20contact%20you." target="_blank" class="email" aria-label="email">
                                         <i class="fa-solid fa-envelope"></i>
                                     </a>
                                     <a href="https://www.youtube.com/@FoysalHasibItAcademy/featured" target="_blank" class="youtube" aria-label="YouTube">
@@ -1481,11 +1483,11 @@
                                         <h6>Social Media</h6>
                                     </div>
                                     <ul class="social-text">
+                                        <li class="mb-2"><a target="_blank"   href="https://github.com/foysalhasib">Github</a></li>
                                         <li class="mb-2"><a target="_blank"   href="https://www.facebook.com/foysalhasib1234">Facebook</a></li>
                                         <li class="mb-2"><a target="_blank"   href="https://medium.com/@faisalhasib82">Medium</a></li>
                                         <li class="mb-2"><a target="_blank"   href="https://www.linkedin.com/in/foysal-hasib-90170a287/">LinkedIn</a></li>
                                         <li class="mb-2"><a target="_blank"   href="https://www.youtube.com/@FoysalHasibItAcademy/featured">Youtube</a></li>
-                                        <li class="mb-2"><a target="_blank"   href="https://github.com/foysalhasib">Github</a></li>
                                     </ul>
                                 </div>
                         
